# taxi-data-api-python

./: .gitignore  Dockerfile  Dockerfile.1stage  Dockerfile.2stage  Dockerfile.naive  Makefile  README.md  docker-compose.yml  pyproject.toml
.gimlet/: electric-paper-taxi-data-api-python.yaml
.github/workflows/: build.yml  ci_cd.yml
src/: api.py  backend.py  config.py  main.py  middleware.py  taxi_data.py  utils.py
taxi-data-api-rust/: Cargo.toml  Dockerfile  Makefile  README.md
taxi-data-api-rust/src/: backend.rs  main.rs
tests/: test_read_parquet.py
