[package]
name = "taxi-data-api-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.9.0"
anyhow = "1.0.91"
chrono = { version = "0.4.38", features = ["serde"] }
env_logger = "0.11.5"
log = "0.4.22"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["json"] }
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.0", features = ["full"] }
polars = { version = "0.35", features = ["parquet", "lazy"] }